[package]
name = "animate-core"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18", features = ["serde"] }
hlua = "0.3"
piston2d-graphics = "0.39"
piston2d-opengl_graphics = "0.77"
num-traits = "0.2"
image = "0.23"
serde_derive = "1.0"
serde = "1.0"
rangemap = "0.1"
dyn-clone = "1.0"
serde_traitobject = "0.2"
derivative = "2.2"

[dev-dependencies]
graphics_buffer = "0.7"
piston_window = "0.117.0"

[[test]]
name = "test"
path = "src/lib.rs"
harness = false